<resources>
    <string name="no_data_found">No Data Found..</string>
    <string name="app_name">StudentPlanner</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="event">Event</string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="thur">THUR</string>
    <string name="wed">WED</string>
    <string name="tue">TUE</string>
    <string name="mon">MON</string>
    <string name="sun">SUN</string>
    <string name="feb_2021">Feb 2021</string>
    <string name="weekly">Weekly</string>
    <string name="today">Today</string>
    <string name="view_reminder">View Reminder</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_account">Create Account</string>
    <string name="login_credentials_error">Incorrect email and password combination. Please try again!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_subtitle">Create your account</string>
    <string name="full_name">Welcome %s %s</string>
    <string name="required_name_error">%s cannot contain numbers or spaces</string>
    <string name="required_field_error">%s is required</string>
    <string name="email_exists_error">This email is taken, Please choose a different email</string>
    <string name="invalid_email_error">Please enter a valid email!</string>
    <string name="password_min_error">%s password must be at least %d characters long</string>
    <string name="create_account_error">there was an error creating you account. please try again later.</string>
    <string name="account_created">Your account has been created. you can now login and start organising your life</string>
    <string name="my_coursework">My Classwork</string>
    <string name="strong">Strong</string>
    <string name="weak">Weak</string>
    <string name="average">Average</string>
    <string name="good">Good</string>
    <string name="excellent">Excellent</string>
    <string name="manage_modules">Manage Modules</string>
    <string name="question_mark">\?</string>
    <string name="add_module_title">Add Module</string>
    <string name="my_modules">My Subjects</string>
    <string name="my_reminders">My Reminders</string>
    <string name="module_code">Subject Code</string>
    <string name="module_name">Subject Name</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="accept_terms_and_conditions">Please accept the terms and conditions</string>
    <string name="terms_and_conditions_title">Student Planner Terms and Conditions</string>
    <string name="search">Search</string>
    <string name="edit_module">Edit Module</string>
    <string name="add_semester">Add Term</string>
    <string name="my_semesters">My Terms</string>
    <string name="_18_apr_2023_16_aug_2023">From 18 Apr 2023 to 16 Aug 2023</string>
    <string name="my_first_term">My first term</string>
    <string name="add_coursework">Add Classwork</string>
    <string name="description">Description</string>
    <string name="priority">Priority</string>
    <string name="module">Subject</string>
    <string name="title">Title</string>
    <string name="select_module">Select Subject</string>
    <string name="select_day">Select Day</string>
    <string name="select_priority">Select Priority</string>
    <string name="select_semester">Select Term</string>
    <string name="select_type">Select Type</string>
    <string name="my_teachers">My Teachers</string>
    <string name="my_calendar">My Study Planner</string>
    <string name="week_view_calendar">Week View</string>
    <string name="my_teachers_modules">My Teachers and Subjects</string>
    <string name="go_back">Back</string>
    <string name="no_semesters_found">No Terms found</string>
    <string name="no_modules_found">No Subjects found</string>
    <string name="no_module_teacher">This subject cannot be found.</string>
    <string name="no_coursework_found">No Classwork found</string>
    <string name="add_class">Add Class</string>
    <string name="select_class_type">Select class type</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="select_start_time_error">Please select a Start Time!</string>
    <string name="select_end_time_error">Please select a End Time!</string>
    <string name="select_day_error">Please select a day!</string>
    <string name="select_semester_error">Please select a term!</string>
    <string name="select_module_error">Please select a subject!</string>
    <string name="select_class_type_error">Please select a class type!</string>
    <string name="select_end_time">Select End Time</string>
    <string name="delete_icon">Delete</string>
    <string name="delete_coursework_title">Are you sure you want to delete this coursework?</string>
    <string name="module_updated">Subject Updated</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_image">Select Image</string>
    <string name="coursework_added">Classwork Added</string>
    <string name="permissions_rationale">StudentPlanner needs permission to access files app to attach files to coursework</string>
    <string name="no_room_assigned">No room assigned</string>
    <string name="no_teacher_assigned">No teacher assigned</string>
    <string name="week_view">Week View</string>
    <string name="time_format_database">%02d:%02d</string>
    <string name="timeLabel">Select Time</string>
    <string name="deadline_time">Deadline Time</string>
    <string name="edit_coursework">Edit Classwork</string>
    <string name="deadline">Deadline</string>
    <string name="add_new_semester">Add New Term</string>
    <string name="edit_semester">Edit Term</string>
    <string name="semester_name">Term Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End date</string>
    <string name="semester">Term</string>
    <string name="day">Day</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="room">Room</string>
    <string name="edit_class">Edit Class</string>
    <string name="add_classes">Add Classes</string>
    <string name="i_accept_the_terms_and_conditions">I accept the terms and conditions</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="view_terms_and_conditions">View terms and conditions</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="long_text">A very very very long line with a lot of texts with ellipsize end</string>
    <string name="long_text_classes">A very very very long line with a lot of texts with ellipsize end for classes</string>
    <string name="completed">Completed</string>
    <string name="more_actions">More Actions</string>
    <string name="manage_coursework">Manage Classwork</string>
    <string name="no_teachers_found">No Teachers found</string>
    <string name="no_teachers_assigned_to_module">There are no teachers assigned to a module</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="edit_teacher">Edit Teacher</string>
    <string name="done">Done</string>
    <string-array name="priority_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string-array name="completion_array_search">
        <item>Any Completion</item>
        <item>Completed</item>
        <item>Not Completed</item>
    </string-array>
    <string-array name="type_array">
        <item>Class</item>
        <item>Study session</item>
        <item>Other</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_cw_reminder">There are no coursework deadlines this month</string>
    <string name="placeholder_name"></string>
    <string name="placeholder_email">Test@gmail.com</string>
    <string name="nav_reminders">Reminders</string>
    <string name="nav_semester">Terms</string>
    <string name="nav_teacher">Teacher</string>
    <string name="nav_module_and_teachers">Subject And Teachers</string>
    <string name="nav_calendar">Study Planner</string>
    <string name="nav_coursework">Classwork</string>
    <string name="nav_modules">Subjects</string>
    <string name="nav_title_profile">Profile</string>
    <string name="nav_logout">Logout</string>
    <string name="placeholder_date">Wednesday, May 25 2023, 6:28PM</string>
    <string name="placeholder_priority">High</string>
    <string name="placeholder_module">COMP1611 Project Management</string>
    <string name="placeholder_completion_status">Completed</string>
    <string name="placeholder_coursework_title">Hiking App</string>
    <string name="placeholder_coursework_description">Create hiking app</string>
    <string name="placeholder_duration">in 5 days</string>
    <string name="add_module_teacher_description">Please select a subject from the list below</string>
    <string name="add_module_teacher">Add subject teacher</string>
    <string name="class_exists_error">This class already exists!\n please try choosing a different class type or choose another subject</string>
    <string name="john_smith">John Smith</string>
    <string name="mobile_application_dev">Mobile Application Dev</string>
    <string name="room1">Room123</string>
    <string name="my_tutorial">My tutorial</string>
    <string name="m_hike_app">M-Hike App</string>
    <string name="comp1424_mobile_app_dev">COMP1424: Mobile App Dev</string>
    <string name="_11_30_pm">11:30 PM</string>
    <string name="medium">Medium</string>
    <string name="not_completed">Not Completed</string>
    <string name="any_priority">Any Priority</string>
    <string name="max_length_error">You have reached the max length!</string>
    <string name="phone_error">%s Must be at least %d characters!</string>
    <string name="placeholder_time_left">in 5 days</string>
    <string name="placeholder_coursework_id">ID 2</string>
    <string name="module_added">Module Added</string>
    <string name="delete_module">Are you sure you want to delete this subject?</string>
    <string name="delete_module_message">Doing so will delete all associated classwork and classes with this subject</string>
    <string name="module_deleted">Subject Deleted</string>
    <string name="delete_semester_message">Doing so will delete all associated classes with this term</string>
    <string name="delete_semester_title">Are you sure you want to delete this term?</string>
    <string name="delete_semester">Term Deleted</string>
    <string name="delete_coursework">Classwork Deleted</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="Other">Other</string>
    <string name="Chatbot">Chatbot</string>
    <string name="past_papers">Past papers</string>
    <string name="study_planner">Study Planner</string>
    <string name="Home">Home</string>
    <string name="Calculator">Calculator</string>
</resources>