<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:itemBackground="@color/yellow"
    app:itemTextColor="@color/dark_grey"
    tools:showIn="navigation_view">

    <group android:id="@+id/group_study_planner" android:title="@string/study_planner" >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/Home"

        />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_reminder"
            android:title="@string/nav_reminders" />
        <item
            android:id="@+id/nav_semester"
            android:icon="@drawable/ic_semester_menu"
            android:title="@string/nav_semester" />
        <item
            android:id="@+id/nav_teachers"
            android:icon="@drawable/round_person_outline_24"
            android:title="@string/nav_teacher" />
        <item
            android:id="@+id/nav_module_teacher"
            android:icon="@drawable/round_person_outline_24"
            android:title="@string/nav_module_and_teachers" />


        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/baseline_calendar_month_24"
            android:title="@string/nav_calendar" />

        <item
            android:id="@+id/nav_coursework"
            android:icon="@drawable/baseline_bookmark_added_24"
            android:title="@string/nav_coursework" />

        <item
            android:id="@+id/nav_module"
            android:icon="@drawable/baseline_view_module_24"
            android:title="@string/nav_modules" />

        <item
            android:id="@+id/nav_past_papers"
            android:icon="@drawable/baseline_newspaper_24"
            android:title="@string/past_papers" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/baseline_calculate_24"
            android:title="@string/Calculator" />

    </group>
    <item android:title="@string/Other">
        <menu>
            <item
                android:id="@+id/nav_Chatbot"
                android:icon="@drawable/ic_chat"
                android:title="@string/Chatbot" />
        </menu>
    </item>

    <item android:title="@string/nav_title_profile">
        <menu>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_person"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>